--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,100 +7,104 @@
     android:background="@color/white"
     tools:context=".auth.FragmentLogin">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:layout_margin="30dp">
-
-        <ImageView
-            android:id="@+id/logo_Image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/tv"
-            android:layout_marginTop="20dp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/taviraj_thin"
-            android:textColor="@color/grey"
-            android:text="Welcome Back,"
-            android:textSize="45sp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:textColor="@color/grey"
-            android:fontFamily="@font/taviraj_thin"
-            android:text="Login to Continue"
-            android:textSize="20sp" />
-
-        <com.google.android.material.textfield.TextInputLayout
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Email"
-            android:layout_marginTop="50dp"
-            android:textColorHint="@color/grey"
-            app:hintTextColor="@color/grey"
-            app:boxStrokeColor="@color/grey"
-            app:boxCornerRadiusTopEnd="20dp"
-            app:boxCornerRadiusBottomStart="20dp"
-            android:background="@color/white"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:layout_margin="30dp">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:id="@+id/username_edit_text"
+            <ImageView
+                android:id="@+id/logo_Image"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:src="@drawable/tv"
+                android:layout_marginTop="20dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/taviraj_thin"
                 android:textColor="@color/grey"
-                android:layout_height="wrap_content"/>
+                android:text="Welcome Back,"
+                android:textSize="45sp" />
 
-        </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/taviraj_thin"
+                android:text="Login to Continue"
+                android:textSize="20sp" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:background="@color/white"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            app:passwordToggleEnabled="true"
-            android:textColorHint="@color/grey"
-            app:hintTextColor="@color/grey"
-            app:boxStrokeColor="@color/grey"
-            app:passwordToggleTint="@color/black"
-            app:boxCornerRadiusTopEnd="20dp"
-            app:boxCornerRadiusBottomStart="20dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_marginTop="20dp">
-
-            <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/grey"
-                android:id="@+id/password_edit_text"
-                android:inputType="textPassword" />
+                android:hint="Email"
+                android:layout_marginTop="50dp"
+                android:textColorHint="@color/grey"
+                app:hintTextColor="@color/grey"
+                app:boxStrokeColor="@color/grey"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                android:background="@color/white"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:id="@+id/username_edit_text"
+                    android:textColor="@color/grey"
+                    android:layout_height="wrap_content"/>
 
-        <Button
-            android:id="@+id/button_login"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:text="Sign In"
-            android:textColor="@color/white"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="5dp"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/warning"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/design_default_color_error"
-            android:text="Please enter valid credentials !"
-            android:visibility="invisible"/>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:background="@color/white"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                app:passwordToggleEnabled="true"
+                android:textColorHint="@color/grey"
+                app:hintTextColor="@color/grey"
+                app:boxStrokeColor="@color/grey"
+                app:passwordToggleTint="@color/black"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_marginTop="20dp">
 
-    </LinearLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/grey"
+                    android:id="@+id/password_edit_text"
+                    android:inputType="textPassword" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/button_login"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:text="Sign In"
+                android:textColor="@color/white"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="5dp"/>
+
+            <TextView
+                android:id="@+id/warning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/design_default_color_error"
+                android:text="Please enter valid credentials !"
+                android:visibility="invisible"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
